# Quark

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
AssetLib/: CMakeLists.txt  Texture.cpp
Editor/: CMakeLists.txt  CameraControlCmpt.cpp  CameraControlCmpt.h  EditorApp.cpp  EditorApp.h  EditorCamera.cpp  EditorCamera.h  imgui.ini
Editor/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  InspectorPanel.cpp  InspectorPanel.h  Panel.h  SceneHeirarchyPanel.cpp  SceneHeirarchyPanel.h
Editor/UI/: Common.cpp  Common.h  Inspector.cpp  Inspector.h  SceneHeirarchy.cpp  SceneHeirarchy.h  SceneViewPort.cpp  SceneViewPort.h  imgui.ini
Engine/: CMakeLists.txt  pch.h
Engine/Application/: Application.cpp  Application.h  EntryPoint.cpp
Engine/Asset/: AssetManager.h  BaseAsset.h  GLTFLoader.cpp  GLTFLoader.h  LoadGLTF.cpp  LoadGLTF.h  LoadOBJ.cpp  LoadOBJ.h
Engine/Core/: Application.cpp  Application.h  Assert.h  Base.h  CRC32.h  Defines.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  PlatformDetection.h  Timer.h  Window.cpp  Window.h
Engine/Events/: Event.h  EventManager.cpp  EventManager.h
Engine/Graphic/: Buffer.h  CommandList.h  Common.h  Device.h  Image.h  PipeLine.h  RenderPassInfo.h  Shader.h
Engine/Math/: Aabb.cpp  Aabb.h  Frustum.cpp  Frustum.h
Engine/Platform/: Detection.h
Engine/Renderer/: Bounds.h  Common.h  DrawContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  NewMaterial.h  NewMesh.h  RenderTypes.cpp  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Texture.cpp  Texture.h
Engine/Rendering/: RenderDevice.cpp  RenderDevice.h  RenderDeviceDriver.cpp  RenderDeviceDriver.h  RenderTypes.h
Engine/Scene/: Component.h  Ecs.cpp  Ecs.h  Entity.cpp  Entity.h  NewScene.cpp  NewScene.h  Scene.cpp  Scene.h  SceneMngr.cpp  SceneMngr.h
Engine/Util/: AlignedAlloc.cpp  Hash.h  IntrusiveHashMap.h  Singleton.h  TemporaryHashMap.h  Util.h
Examples/: CMakeLists.txt
Examples/Texture/: Texture.cpp  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv
Examples/Trangle/: Trangle.cpp
Quark/: CMakeLists.txt  EntryPoint.h  Quark.h  QuarkPch.h
Quark/Animation/: AnimationAsset.cpp  AnimationAsset.h  SkeletonAsset.cpp  SkeletonAsset.h
Quark/Asset/: Asset.h  AssetExtensions.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  AssetSerializer.cpp  AssetSerializer.h  GLTFImporter.cpp  GLTFImporter.h  GLTFLoader.cpp  GLTFLoader.h  ImageAsset.h  ImageAssetImporter.cpp  ImageAssetImporter.h  ImageImporter.cpp  ImageImporter.h  ImageLoader.cpp  ImageLoader.h  Material.h  MaterialAsset.h  MaterialSerializer.cpp  MaterialSerializer.h  Mesh.cpp  Mesh.h  MeshAsset.cpp  MeshAsset.h  MeshImporter.cpp  MeshImporter.h  MeshLoader.cpp  MeshLoader.h  ShaderAsset.h  Texture.h  TextureImporter.cpp  TextureImporter.h  TextureLoader.cpp  TextureLoader.h
Quark/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.cpp  EntryPoint.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  JobSystem.cpp  JobSystem.h  KeyMouseCodes.h  Logger.cpp  Logger.h  TimeStep.h  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Quark/Ecs/: Component.h  Entity.h  EntityGroup.h  EntityRegistry.cpp  EntityRegistry.h
Quark/Events/: ApplicationEvent.h  Event.h  EventHandler.h  EventManager.cpp  EventManager.h  KeyEvent.h  MouseEvent.h
Quark/Graphic/: Buffer.h  CommandList.h  Common.h  Device.h  Image.h  PipeLine.h  RenderPassInfo.h  Shader.h  TextureFormatLayout.cpp  TextureFormatLayout.h
Quark/Math/: Aabb.cpp  Aabb.h  Util.h
Quark/Physics/: TriangleMesh.cpp
Quark/Platform/: Detection.h
Quark/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Quark/RHI/: Buffer.h  CommandList.h  Common.h  Device.h  Image.h  PipeLine.h  RenderPassInfo.h  Shader.h  TextureFormatLayout.cpp  TextureFormatLayout.h
Quark/Render/: BufferPool.h  GLSLCompiler.cpp  GLSLCompiler.h  IRenderable.h  Material.h  Mesh.cpp  Mesh.h  RenderComponents.cpp  RenderComponents.h  RenderContext.cpp  RenderContext.h  RenderParameters.h  RenderQueue.cpp  RenderQueue.h  RenderResourceManager.cpp  RenderResourceManger.h  RenderScene.cpp  RenderScene.h  RenderSwapContext.cpp  RenderSwapContext.h  RenderSystem.cpp  RenderSystem.h  RenderTypes.h  Renderer.cpp  Renderer.h  ShaderLibrary.cpp  ShaderLibrary.h  Skybox.cpp  Skybox.h  design.md
Quark/Renderer/: DefaultRenderResources.h  GLSLCompiler.cpp  GLSLCompiler.h  GpuResourceManager.cpp  GpuResourceManager.h  Program.h  RenderObject.h  RenderProxy.h  RenderTypes.cpp  RenderTypes.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  ShaderLibrary.cpp  ShaderLibrary.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.h  Types.h
Quark/Scene/: Ecs.cpp  Ecs.h  GameObject.cpp  GameObject.h  GameObjectTemplates.inl  Node.cpp  Node.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
Quark/UI/: UI.cpp  UI.h
Quark/Util/: AlignedAlloc.cpp  AlignedAlloc.h  BitOperations.h  CompileTimeHash.h  FileSystem.cpp  FileSystem.h  IntrusivePtr.h  ObjectPool.h  ReadWriteLock.h  Singleton.h
Tests/: CMakeLists.txt  GLTFViewer.cpp  IBL_Test.cpp  JobSystem_Test.cpp  Skybox_Test.cpp  TextureViewer.cpp
src/: CMakeLists.txt  Model.cpp  camera.h  glad.c  glfw_test.cpp  material.h  material_importer.cpp  material_importer.h  mesh.h  mesh_importer.cpp  mesh_importer.h  mesh_renderer.cpp  mesh_renderer.h  model.h  mtl_loader.h  openwindow.cpp  shader.cpp  shader.fs  shader.h  shader.vs  texture.cpp  texture.h
src/Application/: Application.cpp  main.cpp
src/AssetBaker/: CMakeLists.txt  main.cpp
src/AssetLib/: IO.cpp  IO.h  Texture.h
src/Engine/: CMakeLists.txt  pch.h
src/Input/: InputMngr.cpp  InputMngr.h
src/Object/: Object.h
src/SandBox/: CMakeLists.txt  SandBoxApp.cpp  SandBoxApp.h  main.cpp
src/Scene/: SceneMngr.h
src/TestApp/: CMakeLists.txt  TestApp.cpp  TestApp.h
src/Visualization/: Camera.h  Shader.cpp  Shader.h  Viewer.cpp  Viewer.h  Window.cpp  Window.h  shader.fs  shader.vs
src/VulkanApp/: CMakeLists.txt  VulkanApp.cpp  (+1 more)
(+405 files in other folders)
